rename models to blipmodels to avoid name conflict

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "from models.blip import blip_decoder\n",
+    "from blipmodels.blip import blip_decoder\n",
     "\n",
     "image_size = 384\n",
     "image = load_demo_image(image_size=image_size, device=device)\n",
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "from models.blip_vqa import blip_vqa\n",
+    "from blipmodels.blip_vqa import blip_vqa\n",
     "\n",
     "image_size = 480\n",
     "image = load_demo_image(image_size=image_size, device=device)     \n",
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "from models.blip import blip_feature_extractor\n",
+    "from blipmodels.blip import blip_feature_extractor\n",
     "\n",
     "image_size = 224\n",
     "image = load_demo_image(image_size=image_size, device=device)     \n",
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "from models.blip_itm import blip_itm\n",
+    "from blipmodels.blip_itm import blip_itm\n",
     "\n",
     "image_size = 384\n",
     "image = load_demo_image(image_size=image_size,device=device)\n",
